# shortener

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: database.py  main.py  repositories.py  services.py  settings.py
db/migrations/: 01-init-schema.sql
etc/: .env.dev
